// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render colors - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="colors"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="colors_input"
      title="colors"
    >
      <span
        class="emotion-3"
      >
        colors
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); display: none;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; display: none;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 52, 86); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#123456"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(171, 195, 69); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#abc345"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="default"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="default_input"
      title="default"
    >
      <span
        class="emotion-3"
      >
        default
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); display: none;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; display: none;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render defaultColor - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="defaultColor"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="defaultColor_input"
      title="defaultColor"
    >
      <span
        class="emotion-3"
      >
        defaultColor
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); display: none;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; display: none;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render inputStyle - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
  border: 3px solid blue;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="inputStyle"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="inputStyle_input"
      title="inputStyle"
    >
      <span
        class="emotion-3"
      >
        inputStyle
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); display: none;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; display: none;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render label-disabled - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="label-disabled"
>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-1"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); display: none;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; display: none;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render title - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="title"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="title_input"
      title="The color selector"
    >
      <span
        class="emotion-3"
      >
        The color selector
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); display: none;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; display: none;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render triangle-top-left - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="triangle-top-left"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="triangle-top-left_input"
      title="triangle-top-left"
    >
      <span
        class="emotion-3"
      >
        triangle-top-left
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); top: -16px; left: 9px;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; top: -14px; left: 10px;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render triangle-top-right - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="triangle-top-right"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="triangle-top-right_input"
      title="triangle-top-right"
    >
      <span
        class="emotion-3"
      >
        triangle-top-right
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 100%; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); top: -16px; right: 9px;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; top: -14px; right: 10px;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render width - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 0;
}

.emotion-1 {
  white-space: normal;
  margin-bottom: 8px;
}

.emotion-2 {
  height: -webkit-fit-content!important;
  height: -moz-fit-content!important;
  height: fit-content!important;
  min-height: 32px;
}

.emotion-4 {
  margin-bottom: 0px!important;
}

<div
  class="ant-row ant-form-item emotion-0"
  id="width"
>
  <div
    class="ant-col ant-form-item-label ant-form-item-label-left emotion-1 ant-col-xs-24 ant-col-sm-24"
  >
    <label
      class="emotion-2"
      for="width_input"
      title="width"
    >
      <span
        class="emotion-3"
      >
        width
      </span>
    </label>
  </div>
  <div
    class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-24"
  >
    <div
      class="ant-form-item-control-input"
    >
      <div
        class="ant-form-item-control-input-content"
      >
        <div
          class="github-picker emotion-4"
          style="width: 200px; background: rgb(255, 255, 255); border: 1px solid rgba(0,0,0,0.2); box-shadow: 0 3px 12px rgba(0,0,0,0.15); border-radius: 4px; position: relative; padding: 5px; display: flex; flex-wrap: wrap;"
        >
          <div
            style="position: absolute; border: 8px solid transparent; border-bottom-color: rgba(0,0,0,0.15); display: none;"
          />
          <div
            style="position: absolute; border: 7px solid transparent; border-bottom-color: #fff; display: none;"
          />
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(184, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#B80000"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(219, 62, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#DB3E00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(252, 203, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FCCB00"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 139, 2); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#008B02"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 107, 118); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#006B76"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(18, 115, 222); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#1273DE"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(0, 77, 207); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#004DCF"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(83, 0, 235); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#5300EB"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(235, 150, 148); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#EB9694"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(250, 208, 195); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FAD0C3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(254, 243, 189); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#FEF3BD"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(193, 225, 197); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C1E1C5"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 218, 220); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BEDADC"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(196, 222, 246); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#C4DEF6"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(190, 211, 243); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#BED3F3"
                />
              </span>
            </div>
          </span>
          <span>
            <div
              style="width: 25px; height: 25px; font-size: 0px;"
            >
              <span>
                <div
                  style="background: rgb(212, 196, 251); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
                  tabindex="0"
                  title="#D4C4FB"
                />
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Schema colors 1`] = `true`;

exports[`Test Schema colors 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema defaultColor 1`] = `true`;

exports[`Test Schema defaultColor 2`] = `null`;

exports[`Test Schema inputStyle 1`] = `true`;

exports[`Test Schema inputStyle 2`] = `null`;

exports[`Test Schema label-disabled 1`] = `true`;

exports[`Test Schema label-disabled 2`] = `null`;

exports[`Test Schema title 1`] = `true`;

exports[`Test Schema title 2`] = `null`;

exports[`Test Schema triangle-top-left 1`] = `true`;

exports[`Test Schema triangle-top-left 2`] = `null`;

exports[`Test Schema triangle-top-right 1`] = `true`;

exports[`Test Schema triangle-top-right 2`] = `null`;

exports[`Test Schema width 1`] = `true`;

exports[`Test Schema width 2`] = `null`;
